--- a/styles.css
+++ b/styles.css
@@ -1,231 +1,261 @@
-*{
-  margin: auto;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-html{
-    font-size: 16px;
-    font-family: 'Nunito Sans', sans-serif;
-    display: flex;
-    justify-content: center;
-    background-color: seashell;
+html {
+  font-size: 16px;
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: seashell;
+}
+
+.nav-bar {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  background-color: seashell;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 30px;
+}
+
+.nav-bar a {
+  text-decoration: none;
+  color: #182126;
+}
+
+.nav-links a:hover {
+  color: #5A8C7E;
+}
+
+li {
+  list-style-type: none;
+}
+
+.company-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
+  ), url(https://images.unsplash.com/photo-1446071103084-c257b5f70672?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8cGxhbnRzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 500px;
+}
+
+.company-logo h1,
+h3 {
+  color: seashell;
+  text-shadow: 3px 3px #182126;
+  text-align: center;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.products h2 {
+  text-align: center;
+  color: #182126;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+
+.images{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  row-gap: 10px;
+  column-gap: 20px;
+}
+
+figure {
+  display: inline-block;
+  text-align: center;
+}
+
+figure img {
+  vertical-align: top;
+  height: 200px;
+  width: 300px;
+  border-radius: 5px;
+}
+
+figure figcaption {
+  text-align: center;
+  font-weight: bold;
+  color: #182126;
+}
+
+.the-team {
+  background-color: #20593F;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.the-team h2 {
+  font-size: 2rem;
+  border: 5px #182126 solid;
+  height: 200px;
+  width: 100px;
+}
+
+.box {
+  height: 350px;
+  width: 150px;
+  box-shadow: 10px 5px 5px black;
+}
+
+.box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.the-team figcaption {
+  padding-top: 8px;
+  color: seashell;
+  font-weight: bold;
+}
+
+footer {
+  background-color: #182126;
+  padding: 10px;
+  color: seashell;
+}
+
+footer a {
+  color: seashell;
+  text-decoration: underline;
+}
+
+/*mobile device*/
+@media only screen and (max-width: 300px){
+  .nav-links {
+    flex-direction: column;
   }
-  
-  .nav-bar{
-    height: 50px;
-    position: fixed; 
-    top: 0; 
-    width: 100%;
-    z-index: 1;
-    background-color: seashell;
-    padding-left: 20px;
-    padding-right: 20px;
-    display: flex;
-    align-items: center;
+
+  .company-logo {
+    padding-top: 120px;
   }
-  
-  .nav-links{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-right: 30px;
-  }
-  
-  .nav-bar a{
-    text-decoration: none;
-    color: #182126;
-    display: flex;
-    float: right;
-  }
-  
-  .nav-links a:hover{
-    color: #5A8C7E;
-  }
-  
-  li{
-    list-style-type: none;
-  }
-  
-  .company-logo{
-    background-image: url(https://images.unsplash.com/photo-1446071103084-c257b5f70672?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8cGxhbnRzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 500px;
-    padding-top: 50px;
-    opacity: 88%;
-  }
-  
-  .company-logo h1, h3{
-    color: seashell;
-    display: flex;
-    justify-content: center;
-    text-shadow:3px 3px #182126;
-  }
-  
-  h1{
-    font-size: 3rem;
-  }
-  
-  h3{
-    font-size: 1.5rem;
-  }
-  
-  .products h2{
-    text-align: center;
-    color: #182126;
-  }
-  
-  figure {
-      margin: 20px; 
-      display: inline-block;
-      text-align: center;
-  
-  }
-  figure img {
-      vertical-align: top;
-      height: 200px;
-      width: 300px;
-      border-radius: 5px;
-  }
-  
-  figure figcaption {
-      text-align: center;
-      font-weight: bold;
-      color: #182126;
-  }
-  
-  .the-team{
-    background-color: #20593F;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 150px;
-    padding-left: 50px;
-  }
-  
-  .the-team h2{
-    font-size: 2rem;
-    border: 5px #182126 solid;
-    height: 200px;
-    width: 100px;
-  }
-  
-  .box{
-    height: 350px;
-    width: 150px;
-    box-shadow: 10px 5px 5px black;
-  }
-  
-  .box img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .the-team figcaption{
-    padding-top: 8px;
-    color: seashell;
-    font-weight: bold;
-  }
-  footer{
-    background-color: #182126;
-    margin: 0;
-    padding: 10px;
-    color: seashell;
-  }
-  
-  footer a{
-    color: seashell;
-    text-decoration: underline;
-  }
-  
-  /*mobile device*/
-  @media only screen and (max-width: 480px ){
-    .nav-links{
-      flex-direction: column;
-      float: right;
-    }
-  
-   .nav-bar{
-      height: 20%;
-    }
-  
-    .company-logo h1, h3{
-       max-width: 480px;
-       text-align: center;
-       margin: 40px 80px;
-    }
-  
-    .company-logo{
-      padding-top: 120px;
-      max-width: 480px;
-      margin: auto;
-    }
-  
+
   .products {
     margin: 40px 80px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-  
+
   }
-  
-  .the-team{
+
+  .the-team {
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
+
+  .box {
+    height: 110px;
+    width: 250px;
+  }
+
+  .the-team h2 {
+    height: 100px;
+    width: 250px;
+    margin-bottom: 1em;
+  }
+
+  footer li {
+    align-items: center;
+  }
+
+}
+
+@media only screen and (min-width: 301px) and (max-width: 480px) {
+
+  .nav-links {
+    flex-direction: column;
+  }
+
+  .company-logo {
+    padding-top: 120px;
+  }
+
+  .products {
+    margin: 40px 80px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0;
+
   }
-  
-  .box{
+
+  .the-team {
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
+
+  .box {
     height: 110px;
     width: 300px;
   }
-  
-  .the-team h2{
+
+  .the-team h2 {
     height: 100px;
     width: 300px;
+    margin-bottom: 1em;
+  }
+
+  footer li {
+    align-items: center;
+  }
+}
+
+/*tablet device*/
+@media only screen and (min-width: 481px){
+  h1{
+    font-size: 4em;
+  }
+
+  h3{
+    font-size: 2em;
   }
   
-  footer li{
-    padding-left: 50px;
+  .images{
+   padding-left: 5em;
+   padding-right: 5em;
   }
-  }
-  /*tablet device*/
-  @media only screen and (min-width: 481px) and (max-width: 768px ){
-  
-   .company-logo h1, h3{
-       text-align: center;
-       max-width: 500px;
-       margin: 40px 150px;
-    }
-  
-  figure{
-    margin: 5px;
-  }
-  figure img{
-      width: 220px;
-      height: 190px;
-    }
-    .products{
-      margin: 40px 80px;
-    }
-  
-  .box{
-    height: 200px;
-    width: 100px;
-  }
-  
-  .the-team{
-    padding-left: 140px;
-  }
-  .the-team h2{
-    height: 150px;
-  }
-  
-  footer li{
-    padding-left: 100px;
-  }
-  
+}
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
